# CyberClubManager

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/manager/: manager.cpp  manager.h
src/parser/: parser.cpp  parser.h
src/utils/: config.h  event.h  exception.h  messages.h  revenue.h  time.cpp  time.h
src/utils/overseer/: overseer.cpp  overseer.h
src/validator/: validator.cpp  validator.h
tests/: CMakeLists.txt  error.txt  run_tests.py
tests/business_logic_2/: expected_output.txt  valid_input.txt
tests/business_logic_3/: expected_output.txt  valid_input.txt
tests/business_logic_4/: expected_output.txt  valid_input.txt
tests/business_logic_5/: expected_output.txt  valid_input.txt
tests/business_logic_6/: expected_output.txt  valid_input.txt
tests/parser_bad_time_format_1/: expected_output.txt  invalid_input.txt
tests/parser_bad_time_format_2/: expected_output.txt  invalid_input.txt
tests/parser_bad_time_format_3/: expected_output.txt  invalid_input.txt
tests/parser_bad_time_format_4/: expected_output.txt  invalid_input.txt
tests/parser_bad_time_format_5/: expected_output.txt
tests/parser_bad_time_format_6/: expected_output.txt  invalid_input.txt
tests/parser_bad_time_format_7/: expected_output.txt  invalid_input.txt
tests/parser_cost_not_positive_number/: expected_output.txt  invalid_input.txt
tests/parser_cost_very_big_number/: expected_output.txt  invalid_input.txt
tests/parser_event_invalid_format_1/: expected_output.txt  invalid_input.txt
tests/parser_event_invalid_format_10/: expected_output.txt  invalid_input.txt
(+19 files in other folders)
